--- a/app/views/publish_interface/providers/about.html.erb
+++ b/app/views/publish_interface/providers/about.html.erb
@@ -20,16 +20,16 @@
         <%= page_title %>
       </h1>
 
-      <p class="govuk-body">Tell candidates why they should choose to train with you. Say:</p>
+      <p class="govuk-body">Tell candidates why they should choose to train with your organisation. Say:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>who you are</li>
         <li>who you work with</li>
       </ul>
-      <p class="govuk-body">You could mention:</p>
+      <p class="govuk-body">You could mention your:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>your key values</li>
-        <li>your specialisms</li>
-        <li>your past achievements (eg student successes, Ofsted ratings)</li>
+        <li>key values</li>
+        <li>specialisms</li>
+        <li>past achievements (eg student successes, Ofsted ratings)</li>
       </ul>
       <p class="govuk-body">Be specific with any claims you make, and support them with evidence. For example:</p>
       <ul class="govuk-list govuk-list--bullet">
