--- a/app/views/publish/providers/about.html.erb
+++ b/app/views/publish/providers/about.html.erb
@@ -29,7 +29,7 @@
       <ul class="govuk-list govuk-list--bullet">
         <li>key values</li>
         <li>specialisms</li>
-        <li>past achievements (eg student successes, Ofsted ratings)</li>
+        <li>past achievements (for example, student successes and Ofsted ratings)</li>
       </ul>
       <p class="govuk-body">Be specific with any claims you make, and support them with evidence. For example:</p>
       <ul class="govuk-list govuk-list--bullet">
@@ -39,7 +39,7 @@
 
       <%= f.govuk_text_area(:train_with_us,
         form_group: { id: "train-with-us" },
-        label: { text: "Training with you", size: "m" },
+        label: { text: "Training with your organisation", size: "m" },
         max_words: 250,
         rows: 15) %>
 
