[595] - Implement course information editing

--- a/app/views/publish/courses/_description_content.html.erb
+++ b/app/views/publish/courses/_description_content.html.erb
@@ -11,7 +11,7 @@
     "About this course",
     course.about_course,
     %w[about_course],
-    action_path: nil, #about_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
+    action_path: about_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
     action_visually_hidden_text: "details about this course",
   ) %>
 
@@ -21,7 +21,7 @@
     "Interview process (optional)",
     course.interview_process,
     %w[interview_process],
-    action_path: nil, #"#{about_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#interview-process",
+    action_path: "#{about_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#interview-process",
     action_visually_hidden_text: "details about the interview process",
   ) %>
 
@@ -31,7 +31,7 @@
     course.placements_heading,
     course.how_school_placements_work,
     %w[how_school_placements_work],
-    action_path: nil, #"#{about_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#how-school-placements-work",
+    action_path: "#{about_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#how-school-placements-work",
     action_visually_hidden_text: "details about how school placements work",
   ) %>
 <% end %>
