--- a/app/components/flash_banner/view.html.erb
+++ b/app/components/flash_banner/view.html.erb
@@ -1,7 +1,27 @@
 <% if display? %>
-  <% FLASH_TYPES.each do |type| %>
-    <% if flash[type] %>
-      <%= render(NotificationBanner::View.new(text: flash[type], type: type)) %>
+  <% flash.each do |key, value| %>
+    <% if FLASH_TYPES.include?(key.to_s) %>
+      <%= render(NotificationBanner::View.new(text: flash[key], type: key)) %>
+    <% end %>
+
+    <% if key == "error" %>
+      <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary" data-ga-event-form="error">
+        <h2 class="govuk-error-summary__title" id="error-summary-title" data-qa="error__heading">
+          There is a problem
+        </h2>
+        <div class="govuk-error-summary__body">
+          <ul class="govuk-list govuk-error-summary__list">
+            <li>
+              <a href="#<%= value["id"] %>" data-qa="error__text"><%= value["message"] %></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    <% elsif key == "success_with_body" %>
+      <%= govuk_notification_banner(title_text: t("notification_banner.success"), success: true, html_attributes: { role: "alert" }) do |notification_banner| %>
+        <% notification_banner.heading(text: value["title"]) %>
+        <p class="govuk-body" data-qa="flash__success__body"><%= value["body"] %></p>
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
