--- a/app/webpacker/styles/application.scss
+++ b/app/webpacker/styles/application.scss
@@ -2,7 +2,11 @@
 @import "~govuk-frontend/govuk/all";
 @import "~@ministryofjustice/frontend/moj/all";
 
+$git-brand-colour: #159964;
+
+@import "advice";
 @import "card";
+@import "description-list";
 @import "status-box";
 @import "summary-list";
 @import "table";
