[0698] Fixed hash issues

--- a/app/views/publish/courses/accredited_body/_provider_suggestion.html.erb
+++ b/app/views/publish/courses/accredited_body/_provider_suggestion.html.erb
@@ -1,10 +1,10 @@
 <div class="govuk-radios__item" data-qa="course__accredited_body_option">
   <%= form.radio_button :accredited_body_code,
-    provider_suggestion["provider_code"],
-    checked: provider_suggestion["provider_code"] == @course.accrediting_provider&.provider_code,
+    provider_suggestion[:provider_code],
+    checked: provider_suggestion[:provider_code] == @course.accrediting_provider&.provider_code,
     class: "govuk-radios__input" %>
   <%= form.label :accredited_body_code,
-    "#{provider_suggestion['provider_name']} (#{provider_suggestion['provider_code']})",
-    value: provider_suggestion["provider_code"],
+    "#{provider_suggestion[:provider_name]} (#{provider_suggestion[:provider_code]})",
+    value: provider_suggestion[:provider_code],
     class: "govuk-label govuk-radios__label" %>
 </div>
