--- a/app/views/publish/courses/fees/edit.html.erb
+++ b/app/views/publish/courses/fees/edit.html.erb
@@ -22,32 +22,7 @@
         <%= page_title %>
       </h1>
 
-      <%= f.govuk_radio_buttons_fieldset(:course_length,
-        legend: { text: "Course length", size: "m" },
-        form_group: {
-          id: @course_fee_form.errors.key?(:course_length) ? "course_length-error" : "course-length",
-        }) do %>
-          <%= f.govuk_radio_button(:course_length, "OneYear",
-            data: { qa: "course_course_length_oneyear" },
-            label: { text: "1 year" },
-            link_errors: true) %>
-
-          <%= f.govuk_radio_button(:course_length, "TwoYears",
-            label: { text: "Up to 2 years" },
-            data: { qa: "course_course_length_twoyears" }) %>
-
-          <%= f.govuk_radio_button(:course_length, "Other",
-            checked: @course_fee_form.other_course_length?,
-            label: { text: "Other" },
-            data: { qa: "course_course_length_other" }) do %>
-
-            <%= f.govuk_text_field(:course_length_other_length,
-              label: { text: "Course length", size: "s" },
-              width: 20,
-              data: { qa: "course_course_length_other_length" }) %>
-          <% end %>
-      <% end %>
-
+      <%= render partial: "publish/courses/course_length_field", locals: { f: f, form_object: @course_fee_form } %>
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
