--- a/app/views/publish/providers/locations/index.html.erb
+++ b/app/views/publish/providers/locations/index.html.erb
@@ -17,7 +17,7 @@
       <%= page_title %>
     </h1>
 
-    <p class="govuk-body">Use this section to add and edit details of training locations.</p>
+    <p class="govuk-body">Add and edit details of training locations.</p>
 
     <p class="govuk-body">Once a location has been assigned to a course, candidates will be able to:</p>
     <ul class="govuk-list govuk-list--bullet">
