conditional view tests

--- a/app/views/publish/courses/status_panel/_unpublished.html.erb
+++ b/app/views/publish/courses/status_panel/_unpublished.html.erb
@@ -1,5 +1,5 @@
 <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
-<h3 class="govuk-heading-m">Preview</h3>
+<h3 class="govuk-heading-m" data-qa="unpublished__partial">Preview</h3>
 <p class="govuk-body">See how your unpublished changes will look on Find.</p>
 <p class="govuk-body">Preview to check for mistakes before publishing.</p>
 <p class="govuk-body">
