--- a/app/views/publish/courses/_description_status_panel.html.erb
+++ b/app/views/publish/courses/_description_status_panel.html.erb
@@ -9,8 +9,8 @@
   <p class="govuk-body" data-qa="course__is_findable">
     <%= course.on_find %>
   </p>
-
-  <% if course.has_unpublished_changes? && course.is_running? %>
+<!-- Do we need a default here? -->
+  <% if course.has_unpublished_changes? %>
     <%= render partial: "publish/courses/status_panel/unpublished" %>
   <% elsif course.is_published? && course.is_running? %>
     <%= render partial: "publish/courses/status_panel/published" %>
