--- a/app/views/publish/courses/status_panel/_withdrawn.html.erb
+++ b/app/views/publish/courses/status_panel/_withdrawn.html.erb
@@ -10,7 +10,9 @@
 <h3 class="govuk-heading-m">Preview</h3>
 <p class="govuk-body">See how this course looked.</p>
 <p class="govuk-body">
-  <%= govuk_link_to "Preview course", preview_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), "data-qa": "course__preview-link" %>
+  <%= govuk_link_to "Preview course" %>
+
+  <%# govuk_link_to "Preview course", preview_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), "data-qa": "course__preview-link" %>
 </p>
 
 <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
