--- a/app/views/publish/courses/salary/edit.html.erb
+++ b/app/views/publish/courses/salary/edit.html.erb
@@ -1,4 +1,4 @@
-<% page_title = "Course length and fees" %>
+<% page_title = "Course length and salary" %>
 <% content_for :page_title, title_with_error_prefix("#{page_title} – #{@course.name_and_code}", @course_salary_form.errors.any?) %>
 
 <% content_for :before_content do %>
