--- a/app/views/publish/providers/locations/edit.html.erb
+++ b/app/views/publish/providers/locations/edit.html.erb
@@ -21,7 +21,7 @@
 
       <p class="govuk-body">When you’ve added a location, you can assign it to a course in the ‘Basic details’ tab of the course. Candidates will see a list of locations on the course page on Find.</p>
       <%= render "form", f: f %>
-      <%= f.govuk_submit "Add location", data: { qa: "location__publish-changes" } %>
+      <%= f.govuk_submit "Save", data: { qa: "location__publish-changes" } %>
     <% end %>
   </div>
 </div>
