--- a/app/views/publish/courses/preview/_apply.html.erb
+++ b/app/views/publish/courses/preview/_apply.html.erb
@@ -37,7 +37,11 @@
             <td class="govuk-table__cell">
               <strong><%= smart_quotes(site_status.site.location_name) %></strong>
               <br>
-              <%= smart_quotes(site_status.site.full_address) %>
+              <%=site_status.vac_status%>
+              <%=site_status.status%>
+              <%=site_status.publish%>
+              asd
+              <%#= smart_quotes(site_status.site.full_address) %>
             </td>
             <td class="govuk-table__cell">
               <%= site_status.has_vacancies? ? "Yes" : "No" %>
