--- a/app/views/publish/courses/status_panel/_unpublished.html.erb
+++ b/app/views/publish/courses/status_panel/_unpublished.html.erb
@@ -3,9 +3,7 @@
 <p class="govuk-body">See how your unpublished changes will look on Find.</p>
 <p class="govuk-body">Preview to check for mistakes before publishing.</p>
 <p class="govuk-body">
-  <%= govuk_link_to "Preview course" %>
-
-  <%# govuk_link_to "Preview course", preview_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), "data-qa": "course__preview-link" %>
+  <%=govuk_link_to "Preview course", preview_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), "data-qa": "course__preview-link" %>
 </p>
 
 <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
