--- a/app/views/publish/courses/age_range/edit.html.erb
+++ b/app/views/publish/courses/age_range/edit.html.erb
@@ -2,14 +2,14 @@
 <% content_for :page_title, title_with_error_prefix("#{page_title} – #{course.name_and_code}", form_object.errors.any?) %>
 
 <% content_for :before_content do %>
-  <%= govuk_back_link_to(details_provider_recruitment_cycle_course_path(course.provider_code, course.recruitment_cycle_year, course.course_code)) %>
+  <%= govuk_back_link_to(details_publish_provider_recruitment_cycle_course_path(course.provider_code, course.recruitment_cycle_year, course.course_code)) %>
 <% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with(
       model: form_object,
-      url: age_range_provider_recruitment_cycle_course_path(@course.provider_code, @course.recruitment_cycle_year, @course.course_code),
+      url: age_range_publish_provider_recruitment_cycle_course_path(@course.provider_code, @course.recruitment_cycle_year, @course.course_code),
       scope: :course,
       method: :put,
     ) do |f| %>
@@ -17,7 +17,7 @@
       <%= f.govuk_error_summary %>
 
       <%= f.govuk_radio_buttons_fieldset(:age_range_in_years, legend: { text: page_title, size: "l" }, caption: { text: course.name_and_code, size: "l" }) do %>
-        <% @course.meta["edit_options"]["age_range_in_years"].each do |value| %>
+        <% @course.edit_course_options["age_range_in_years"].each do |value| %>
           <%= f.govuk_radio_button(:age_range_in_years,
             value,
             label: { text: I18n.t("edit_options.age_range_in_years.#{value}.label") },
