[0629] Added styling for inset text

--- a/app/webpacker/styles/application.scss
+++ b/app/webpacker/styles/application.scss
@@ -7,6 +7,7 @@ $git-brand-colour: #159964;
 @import "advice";
 @import "card";
 @import "description-list";
+@import "inset-text";
 @import "status-box";
 @import "summary-list";
 @import "table";
