[0597] Added the route for GCSE

--- a/app/components/gcse_row_content_component/view.html.erb
+++ b/app/components/gcse_row_content_component/view.html.erb
@@ -15,12 +15,12 @@
   <%= govuk_inset_text(classes: inset_text_css_classes) do %>
     <p class="govuk-heading-s app-inset-text__title">GCSE and equivalency tests</p>
     <p class="govuk-body">
-      <%= govuk_link_to "Enter GCSE and equivalency test requirements", "#"
-        # gcses_pending_or_equivalency_tests_provider_recruitment_cycle_course_path(
-        #   course.provider.provider_code,
-        #   course.provider.recruitment_cycle_year,
-        #   course.course_code,
-        # ) 
+      <%= govuk_link_to "Enter GCSE and equivalency test requirements", 
+        gcses_pending_or_equivalency_tests_publish_provider_recruitment_cycle_course_path(
+          course.provider.provider_code,
+          course.provider.recruitment_cycle_year,
+          course.course_code,
+        )
         %>
     </p>
   <% end %>
