--- a/app/views/publish/courses/_basic_details_tab.html.erb
+++ b/app/views/publish/courses/_basic_details_tab.html.erb
@@ -46,8 +46,8 @@
         <% row.key { "Outcome" } %>
         <% row.value { course.outcome } %>
         <% row.action({
-          # href: outcome_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
-          # visually_hidden_text: "outcome",
+          href: outcome_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
+          visually_hidden_text: "outcome",
         }) %>
       <% end %>
 
