[0612] Fixed duplicated page title

--- a/app/views/publish/providers/locations/index.html.erb
+++ b/app/views/publish/providers/locations/index.html.erb
@@ -1,6 +1,6 @@
 <% page_title = "Locations" %>
 
-<%= render PageTitle::View.new(title: page_title) %>
+<% content_for :page_title, page_title %>
 
 <% content_for :before_content do %>
   <%= govuk_back_link_to(
