[616] Port the withdrawing courses flow

--- a/app/views/publish/courses/_description_status_panel.html.erb
+++ b/app/views/publish/courses/_description_status_panel.html.erb
@@ -25,9 +25,7 @@
     <h3 class="govuk-heading-m">Withdraw</h3>
     <p class="govuk-body">Remove this course from Find and close applications.</p>
     <p class="govuk-body">
-      <%= govuk_link_to "Withdraw this course" %>
-
-      <%# govuk_link_to "Withdraw this course", withdraw_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), class: "app-link--destructive", data: { qa: "course__withdraw-link" } %>
+      <%= govuk_link_to "Withdraw this course", withdraw_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), class: "app-link--destructive", data: { qa: "course__withdraw-link" } %>
     </p>
   <% elsif course.new_and_not_running? %>
     <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
