--- a/app/webpacker/styles/application.scss
+++ b/app/webpacker/styles/application.scss
@@ -8,6 +8,7 @@ $git-brand-colour: #159964;
 @import "card";
 @import "description-list";
 @import "inset-text";
+@import "link";
 @import "list";
 @import "status-box";
 @import "summary-list";
