--- a/app/views/publish/courses/course_information/edit.html.erb
+++ b/app/views/publish/courses/course_information/edit.html.erb
@@ -1,8 +1,12 @@
 <% page_title = "Course information" %>
-<% content_for :page_title, title_with_error_prefix("#{page_title} – #{@course.name_and_code}", @course_information_form.errors.any?) %>
+<% content_for :page_title, title_with_error_prefix("#{page_title} – #{course.name_and_code}", @course_information_form.errors.any?) %>
 
 <% content_for :before_content do %>
   <%= govuk_back_link_to(publish_provider_recruitment_cycle_course_path(@provider.provider_code, @course.recruitment_cycle_year, @course.course_code)) %>
+<% end %>
+
+<% if params[:copy_from].present? %>
+  <%= render partial: "publish/courses/copy_content_warning", locals: { copied_fields: @copied_fields } %>
 <% end %>
 
 <div class="govuk-grid-row">
@@ -18,7 +22,7 @@
       <%= f.govuk_error_summary %>
 
       <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l"><%= @course.name_and_code %></span>
+        <span class="govuk-caption-l"><%= course.name_and_code %></span>
         <%= page_title %>
       </h1>
 
@@ -56,6 +60,7 @@
       ) %>
 
       <%= f.govuk_text_area(:about_course,
+        value: @course.enrichments.last[:about_course],
         label: { text: "About this course", size: "s" },
         max_words: 400,
         rows: 20) %>
@@ -73,13 +78,14 @@
       </ul>
 
       <%= f.govuk_text_area(:interview_process,
+        value: @course.enrichments.last[:interview_process],
         label: { text: "Interview process (optional)", size: "s" },
         max_words: 250,
         rows: 15) %>
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
-      <h3 class="govuk-heading-m" id="how-school-placements-work"><%= @course.placements_heading %></h3>
+      <h3 class="govuk-heading-m" id="how-school-placements-work">How school placements work</h3>
 
       <p class="govuk-body">
         Give candidates more information about the schools they’ll be teaching in. Tell them:
@@ -115,11 +121,21 @@
       <% end %>
 
       <%= f.govuk_text_area(:how_school_placements_work,
-        label: { text: @course.placements_heading, size: "s" },
+        value: @course.enrichments.last[:how_school_placements_work],
+        label: { text: "How school placements work", size: "s" },
         max_words: 350,
         rows: 15) %>
 
       <%= f.govuk_submit "Save" %>
     <% end %>
   </div>
+  <aside class="govuk-grid-column-one-third" data-qa="course__related_sidebar">
+    <%= render(
+      partial: "publish/courses/related_sidebar",
+      locals: {
+        course: @course,
+        page_path: about_publish_provider_recruitment_cycle_course_path(@provider.provider_code, @course.recruitment_cycle_year, @course.course_code),
+      },
+    ) %>
+  </aside>
 </div>
