--- a/app/views/publish/courses/_course_length_field.html.erb
+++ b/app/views/publish/courses/_course_length_field.html.erb
@@ -4,22 +4,16 @@
     id: form_object.errors.key?(:course_length) ? "course_length-error" : "course-length",
   }) do %>
     <%= f.govuk_radio_button(:course_length, "OneYear",
+      checked: @course.enrichments.last[:course_length] == "OneYear",
       data: { qa: "course_course_length_oneyear" },
       label: { text: "1 year" },
       link_errors: true) %>
 
     <%= f.govuk_radio_button(:course_length, "TwoYears",
+      checked: @course.enrichments.last[:course_length] == "TwoYears",
       label: { text: "Up to 2 years" },
       data: { qa: "course_course_length_twoyears" }) %>
 
-    <%= f.govuk_radio_button(:course_length, "Other",
-      checked: form_object.other_course_length?,
-      label: { text: "Other" },
-      data: { qa: "course_course_length_other" }) do %>
+    <%= render partial: "publish/courses/other_course_length_field", locals: { f: f, course_object: @source_course ? source_course : @course } %>
 
-      <%= f.govuk_text_field(:course_length_other_length,
-        label: { text: "Course length", size: "s" },
-        width: 20,
-        data: { qa: "course_course_length_other_length" }) %>
-    <% end %>
 <% end %>
