[836] Migrate the training providers list
Also migrates their courses

--- a/app/views/publish/courses/_course_table.html.erb
+++ b/app/views/publish/courses/_course_table.html.erb
@@ -13,6 +13,6 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-    <%= render partial: "course_table_row", collection: courses, as: :course %>
+    <%= render partial: "publish/courses/course_table_row", collection: courses, as: :course %>
   </tbody>
 </table>
