--- a/app/views/publish/courses/requirements/edit.html.erb
+++ b/app/views/publish/courses/requirements/edit.html.erb
@@ -6,6 +6,10 @@
   <%= govuk_back_link_to(publish_provider_recruitment_cycle_course_path(@provider.provider_code, @course.recruitment_cycle_year, @course.course_code)) %>
 <% end %>
 
+<% if params[:copy_from].present? %>
+  <%= render partial: "publish/courses/copy_content_warning", locals: { copied_fields: @copied_fields } %>
+<% end %>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with(
@@ -25,6 +29,7 @@
 
       <%= f.govuk_text_area :personal_qualities,
         form_group: { id: "personal-qualities" },
+        value: @course.enrichments.last[:personal_qualities],
         label: { text: "Personal qualities (optional)", size: "m" },
         hint: { text: "Tell applicants about the skills, motivation and experience you’re looking for (for example, experience of working with children, a genuine passion for the subject or a talent for public speaking)." },
         max_words: 100,
@@ -34,6 +39,7 @@
 
       <%= f.govuk_text_area :other_requirements,
         form_group: { id: "other-requirements" },
+        value: @course.enrichments.last[:other_requirements],
         label: { text: "Other requirements (optional)", size: "m" },
         hint: { text: "If applicants need any non-academic qualifications or documents, list them here (such as criminal record checks or relevant work experience)." },
         max_words: 100,
@@ -42,4 +48,13 @@
       <%= f.govuk_submit "Save" %>
     <% end %>
   </div>
+  <aside class="govuk-grid-column-one-third" data-qa="course__related_sidebar">
+     <%= render(
+      partial: "publish/courses/related_sidebar",
+      locals: {
+        course: @course,
+        page_path: requirements_publish_provider_recruitment_cycle_course_path(@course.provider.provider_code, @course.recruitment_cycle_year, @course.course_code),
+      },
+    ) %>
+  </aside>
 </div>
