--- a/app/views/publish/courses/gcse_requirements/edit.html.erb
+++ b/app/views/publish/courses/gcse_requirements/edit.html.erb
@@ -29,7 +29,7 @@
       GCSEs and equivalency tests
     </h1>
 
-     <%= render partial: "publish/courses/gcse_requirements", locals: { f: f, course_object:  @course } %>
+     <%= render partial: "publish/courses/gcse_requirements", locals: { f: f, course_object: @source_course ? source_course : @course } %>
 
       <%= f.submit "Save", class: "govuk-button", data: { qa: "gcse_requirements__save" } %>
     <% end %>
