--- a/app/views/publish/shared/_aside_information_box.html.erb
+++ b/app/views/publish/shared/_aside_information_box.html.erb
@@ -5,9 +5,9 @@
 
     <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
-    <h2 class="govuk-heading-s">Your courses for the <%= "#{Settings.current_cycle} to #{Settings.current_cycle + 1}" %> cycle</h2>
+    <h2 class="govuk-heading-s">Your courses for the <%= "#{Settings.current_recruitment_cycle_year} to #{Settings.current_recruitment_cycle_year + 1}" %> cycle</h2>
     <p class="govuk-body">
-      Courses you publish for the <%= "#{Settings.current_cycle} to #{Settings.current_cycle + 1}" %> cycle will be made available on Find postgraduate teacher training for candidates to view.
+      Courses you publish for the <%= "#{Settings.current_recruitment_cycle_year} to #{Settings.current_recruitment_cycle_year + 1}" %> cycle will be made available on Find postgraduate teacher training for candidates to view.
     </p>
 
     <h2 class="govuk-heading-s">Support and guidance</h2>
