--- a/app/views/publish/providers/show.html.erb
+++ b/app/views/publish/providers/show.html.erb
@@ -10,7 +10,7 @@
     <% if @provider.rolled_over? %>
       <%= render partial: "publish/recruitment_cycles/show_during_rollover" %>
     <% else %>
-     <%= render partial: "publish/recruitment_cycles/provider_info", locals: { provider: @provider, year: Settings.current_cycle, recruitment_cycle: @recruitment_cycle } %>
+     <%= render partial: "publish/recruitment_cycles/provider_info", locals: { provider: @provider, year: Settings.current_recruitment_cycle_year, recruitment_cycle: @recruitment_cycle } %>
     <% end %>
   </div>
   <%= render partial: "publish/shared/aside_information_box" %>
